tests/ui/macros/reparse-expr-issue-139495.rs
macro_rules! m {
  ($abi : expr) => { extern $abi } //~ ERROR expected expression, found keyword `extern`
}

fn main() {
    m!(-2)
}
